# ethrex-ethproofs

./: .gitignore  Cargo.toml  Makefile  README.md  mix.exs
.github/workflows/: ci.yml
assets/: tailwind.config.js
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  test.exs
crates/ethproofs-api/: Cargo.toml  README.md
crates/ethproofs-api/src/: client.rs  constants.rs  errors.rs  lib.rs  request.rs  response.rs
crates/ethproofs-api/src/rpc/: blocks.rs  cloud_instances.rs  clusters.rs  common.rs  mod.rs  proofs.rs  single_machine.rs
crates/ethproofs-api/tests/: client_tests.rs
lib/: ethproofs_client.ex  ethproofs_client_web.ex
lib/ethproofs_client/: block_metadata.ex  eth_rpc.ex  health_router.ex  helpers.ex  input_generator.ex  missed_blocks_store.ex  notifications.ex  proved_blocks_store.ex  prover.ex  repo.ex  rpc.ex  system_info.ex
lib/ethproofs_client/blocks/: missed_block.ex  proved_block.ex
lib/ethproofs_client/notifications/: slack.ex
lib/ethproofs_client_web/: endpoint.ex  router.ex
lib/ethproofs_client_web/components/: core_components.ex  layouts.ex
lib/ethproofs_client_web/controllers/: error_html.ex  health_controller.ex
lib/ethproofs_client_web/live/: dashboard_live.ex
native/ethrex_ethproofs_input_generator/: Cargo.toml  README.md
native/ethrex_ethproofs_input_generator/src/: lib.rs
priv/repo/migrations/: 20260204000001_create_blocks_tables.exs
test/ethproofs_client/: input_generator_test.exs  missed_blocks_store_test.exs  proved_blocks_store_test.exs  prover_test.exs
(+2 files in other folders)
