[workspace]
members = ["crates/ethproofs-api"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["LambdaClass"]

[workspace.dependencies]
reqwest = { version = "0.11", features = ["json"] }
url = "2.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.17"
